--- a/app/css/master.css
+++ b/app/css/master.css
@@ -295,19 +295,20 @@ VENEMOVIES: LAYOUT - MOVIES
   box-sizing: border-box;
   margin-top: 2em;
   padding: 2em;
-  width: 440px; }
+  width: 32%; }
 
 .movie-content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding-bottom: 2em; }
+  padding-bottom: 1em; }
   .movie-content img {
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     height: 210px;
     margin-right: 2em;
-    width: 150px; }
+    width: 100%; }
   .movie-content .description {
+    height: 210px;
     padding: 1em 0; }
     .movie-content .description a {
       color: #c42b3d;
@@ -316,6 +317,8 @@ VENEMOVIES: LAYOUT - MOVIES
       font-weight: 600;
       margin-bottom: 1em;
       margin-top: 1em; }
+      .movie-content .description a:hover {
+        color: #d05564; }
     .movie-content .description h5 {
       color: #afafaf;
       margin-bottom: 1em;
