--- a/app/scss/_layout.scss
+++ b/app/scss/_layout.scss
@@ -188,20 +188,21 @@ VENEMOVIES: LAYOUT - MOVIES
 	box-sizing: border-box;
 	margin-top: 2em;
 	padding: $padding * 2;
-	width: 440px;
+	width:  32%;
 }
 
 // ========= movie content========= //
 .movie-content {
 	display: flex;
-	padding-bottom: 2em;
+	padding-bottom: $padding;
 	img {
 		box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
 		height: 210px;
 		margin-right: 2em;
-		width: 150px;
+		width: 100%;
 	}
 	.description {
+		height: 210px;
 		padding: $padding 0;
 		a {
 			color: $color-main-2;
@@ -210,6 +211,9 @@ VENEMOVIES: LAYOUT - MOVIES
 			font-weight: 600;
 			margin-bottom:  1em;
 			margin-top: 1em;
+			&:hover {
+				color: mix($color-main-2, #fff, 80%);
+			}
 		}
 		h5 {
 			color: $color-text-1-g;
